# TNF

./: .gitignore  README.md  example.txt  example_24.txt  main.py  pyproject.toml  run_tableau.py  run_tnf.py  tools.py
Solver/: bica.py  circuit.py
TNF/src/: inconsistencies.py  separated_formula.py  subsumptions.py  tnf.py
TNF/test/: test_inconsistencies.py  test_separated_formula.py  test_subsumptions.py  test_tnf.py  test_tnf_times.py
TemporalFormula/src/: temporal_formula.py
TemporalFormula/test/: test_temporal_formula.py
solvers/bica/: README  approx.py  asyncproc.py  bica.py  forqes  forqes-g3  forqes.py  hhlmuc  link-bin.py  mscg  mscg.py  muser2  primer-a  primer-b  primer-pe2  primer.py
tests/: bike.txt  bnk.1.txt  bnk.2.txt  bnk.3.txt  bnk.4.txt  example.12.txt  example.26.txt  example.29.txt  example.5.txt  example.6.txt  robot.txt
tests/Results_Examples/: bike  bnk1  bnk2  bnk3  bnk4  example12  example26  example29  example5  example6  robot
