# poetry.toml

[tool.poetry]
name = "TNF"
version = "0.1.0"
description = "A beautiful poetry project"
authors = ["Ander Alonso <aalonso@developair.es>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
parsimonious = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
